# dcp-ai

./: .env.example  .eslintrc.json  .gitignore  .prettierignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.es.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  CONTRIBUTING.pt-BR.md  CONTRIBUTING.zh-CN.md  GOVERNANCE.md  LICENSE  README.es.md  README.ja.md  README.md  README.pt-BR.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  mkdocs.yml  package-lock.json  package.json  protocol_fingerprints.json
.github/: CODEOWNERS  README.md  labeler.yml
api/: README.md  openapi.yaml
cli/: package-lock.json  package.json
credentials/: v2.jsonld
deploy/: README.md
docker/: Dockerfile  README.md  docker-compose.yml
docs/: AGENT_CREATION_AND_CERTIFICATION.md  API_REFERENCE.md  ARCHITECTURE.md  Dcp-ai_Full_Package_V1.1.md  EARLY_ADOPTERS.md  GENESIS_PAPER.md  GOVERNMENT_DEPLOYMENT.md  IETF_DRAFT.md  MIGRATION_V1_V2.md  NIST_CONFORMITY.md  OBSERVABILITY.es.md  OBSERVABILITY.ja.md  OBSERVABILITY.md  OBSERVABILITY.pt-BR.md  OBSERVABILITY.zh-CN.md  OPERATOR_GUIDE.md  QUICKSTART.es.md  QUICKSTART.ja.md  QUICKSTART.md  QUICKSTART.pt-BR.md  QUICKSTART.zh-CN.md  QUICKSTART_AGNO.md  QUICKSTART_CREWAI.md  QUICKSTART_EXPRESS.md  QUICKSTART_LANGCHAIN.md  QUICKSTART_OPENAI.md  README.md  SECURITY_MODEL.md  STORAGE_AND_ANCHORING.md  TECHNICAL_ARCHITECTURE.md  draft-dcp-ai-citizenship-00.html  draft-dcp-ai-citizenship-00.txt  draft-dcp-ai-citizenship-00.xml
keys/: README.md  agent_public_key.txt  agent_secret_key.txt  public_key.txt  secret_key.txt
lib/: verify.js
playground/: README.md  index.html
scripts/: build-docs-site.sh  docs-index.md  generate-production-examples.js  generate-v2-examples.js
sdks/python/: README.es.md  README.ja.md  README.md  README.pt-BR.md  README.zh-CN.md  pyproject.toml
sdks/python/dcp_ai/: __init__.py  bundle.py  cli.py  crypto.py  merkle.py  models.py  schema.py  verify.py
sdks/python/dcp_ai/observability/: __init__.py  otlp.py  telemetry.py
sdks/python/dcp_ai/openai/: __init__.py
sdks/python/dcp_ai/providers/: __init__.py  ed25519_provider.py  ml_dsa_65_provider.py  slh_dsa_192f_provider.py
sdks/python/dcp_ai/v2/: __init__.py  a2a.py  algorithm_advisory.py  arbitration.py  awareness_threshold.py  blinded_rpr.py  canonicalize.py  composite_ops.py  composite_sig.py  conflict_resolution.py  crypto_provider.py  crypto_registry.py  delegation.py  domain_separation.py  dual_hash.py  emergency_revocation.py  error_codes.py  lifecycle.py  models.py  multi_party_auth.py  pq_checkpoint.py  principal_mirror.py  proof_of_possession.py  rights.py  security_tier.py  session_nonce.py  signed_payload.py  succession.py
sdks/python/tests/: conftest.py  test_a2a.py  test_composite_sig.py  test_conformance.py  test_dcp07_08_09.py  test_integrations.py  test_interop.py  test_lifecycle.py  test_nist_kat.py  test_succession.py  test_telemetry.py  test_v24_hardening.py
sdks/rust/: Cargo.toml  README.es.md  README.ja.md  README.md  README.pt-BR.md  README.zh-CN.md
sdks/rust/src/: crypto.rs  lib.rs  types.rs  verify.rs
sdks/rust/src/observability/: mod.rs  otlp.rs
sdks/rust/src/providers/: ed25519.rs  ml_dsa_65.rs  ml_kem_768.rs  mod.rs  slh_dsa_192f.rs
sdks/rust/src/v2/: a2a.rs  advisory.rs  arbitration.rs  awareness_threshold.rs  blinded_rpr.rs  canonicalize.rs  composite_ops.rs  composite_sig.rs  conflict_resolution.rs  crypto_provider.rs  delegation.rs  domain_separation.rs  dual_hash.rs  emergency_revocation.rs  error_codes.rs  lifecycle.rs  mod.rs  multi_party_auth.rs  pq_checkpoint.rs  principal_mirror.rs  proof_of_possession.rs  rights.rs  security_tier.rs  session_nonce.rs  signed_payload.rs  succession.rs  types.rs
sdks/rust/tests/: composite_sig.rs  conformance.rs  dcp07_08_09.rs  interop.rs  nist_kat.rs  v24_hardening.rs  v25_a2a.rs  v26_cross_ports.rs  v27_errors.rs  wasm_bindings.rs
server/: README.md  index.js
services/: README.md
spec/: AUDIT-v2.0-FINAL.md  BUNDLE.md  CANONICALIZATION_PROFILE.md  DCP-01.md  DCP-02.md  DCP-03.md  DCP-04.md  DCP-05.md  DCP-06.md  DCP-07.md  DCP-08.md  DCP-09.md  DCP-AI-v2.0.md  README.es.md  README.ja.md  README.md  README.pt-BR.md  README.zh-CN.md  VERIFICATION.md
templates/: README.md
tools/: bundle_sign.js  bundle_verify.js  (+4 more)
(+353 files in other folders)
