[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dcp-ai"
version = "1.0.0"
description = "Python SDK for the Digital Citizenship Protocol for AI Agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pynacl>=1.5.0",
    "jsonschema>=4.20.0",
    "pydantic>=2.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100.0", "uvicorn>=0.24.0"]
langchain = ["langchain>=0.1.0", "langchain-core>=0.1.0"]
openai = ["openai>=1.0.0"]
crewai = ["crewai>=0.1.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21.0"]

[project.scripts]
dcp = "dcp_ai.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["dcp_ai"]
