[package]
name = "dcp-ai"
version = "1.0.0"
edition = "2021"
description = "Rust SDK for the Digital Citizenship Protocol for AI Agents"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
hex = "0.4"
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
wasm = ["wasm-bindgen"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
