[package]
name = "dcp-ai"
version = "2.7.0"
edition = "2021"
description = "Rust SDK for the Digital Citizenship Protocol for AI Agents"
license = "Apache-2.0"
authors = ["DCP-AI Contributors"]
repository = "https://github.com/dcp-ai-protocol/dcp-ai"
homepage = "https://dcp-ai.org"
keywords = ["dcp", "ai", "agent", "citizenship", "protocol"]
categories = ["authentication", "cryptography"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
hex = "0.4"
sha3 = "0.10"
thiserror = "1"
fips203 = "0.4"
fips204 = "0.4"
fips205 = "0.4"
zeroize = { version = "1.8", features = ["derive"] }
getrandom = { version = "0.2", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

# Optional OTLP bridge (feature = "otlp")
opentelemetry = { version = "0.24", optional = true }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.17", features = ["http-proto", "reqwest-client", "metrics"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "getrandom/js"]
otlp = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tokio"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
